# Schnek

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  schnek-config.cmake  schnek.kdevelop  schnek.kdevelop.filelist  schnek.kdevelop.pcs  schnek.kdevses  schnek.tag
.circleci/: config.yml
.githooks/: commit-msg
Contoh/: example_setup_cpc.cpp
cmake/modules/: FindKokkos.cmake
docker/: Dockerfile
docs/: conf.py  index.rst
docs/manual/: creating-parallel-codes.rst  index.rst  installation.rst  multi-dimensional-grids.rst  ranges-ghost-cells-and-fields.rst  reading-setup-files.rst  simulation-blocks-and-data.rst  writing-data.rst
docs/manual/creating-parallel-codes/: cartesian-subdivision-using-mpi.rst  dividing-simulation-domains.rst
docs/manual/multi-dimensional-grids/: additional-array-functions.rst  argument-checking-policies.rst  grid-basics.rst  index-types-and-the-array-class.rst  storage-policies.rst  sub-grids-and-grid-transformations.rst
docs/manual/ranges-ghost-cells-and-fields/: boundaries.rst  fields.rst  rectangular-ranges.rst
docs/manual/reading-setup-files/: a-first-example.rst  adding-user-defined-functions.rst  default-values-arrays-and-constants.rst  error-handling.rst  evaluating-expressions.rst  filling-fields.rst
docs/manual/simulation-blocks-and-data/: adding-literature-references.rst  handling-multiple-child-block-types.rst  hierarchical-simulation-blocks.rst  sharing-data-between-blocks.rst  (+1 more)
examples/: Makefile.am  Makefile.in  example_array.cpp  example_array_cpc.cpp  example_array_functions.cpp  example_blocks_childblocks.cpp  example_blocks_childblocks.setup  example_blocks_hierarchy.cpp  example_blocks_hierarchy01.setup  example_blocks_lifecycle.cpp  example_blocks_lifecycle.setup  example_blocks_storage.cpp  example_blocks_storage.setup  example_boundary.cpp  example_diagnostic_hdf5.cpp  example_diagnostic_hdf5.setup  example_diagnostic_simple.cpp  example_diagnostic_simple.setup  example_fields_basics.cpp  example_fields_cpc.cpp  example_grids_basics.cpp  example_grids_cpc.cpp  example_grids_subgrid.cpp  example_grids_transform.cpp  example_gridtransform_cpc.cpp  example_literature_cpc.cpp  example_mpisub.cpp  example_mpisub_cpc.cpp  example_range.cpp  example_range_cpc.cpp  example_setup_array.cpp  example_setup_array.setup  example_setup_blocks_cpc.cpp  example_setup_blocks_cpc.setup  example_setup_constant.cpp  example_setup_constant.setup  example_setup_cpc.cpp  example_setup_cpc.setup  example_setup_defaults.cpp  example_setup_defaults01.setup  (+17 more)
extradoc/: todo.dox
m4/: ax_hdf5.m4
parser/: Makefile  deckglobal.h  deckgrammar.y  deckscanner.rl  lemon.c  lempar.c
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  algo.hpp  algo.t  argcheck.h  argcheck.hpp  array.hpp  array.t  arrayexpression.hpp  config.hpp.in  ctassert.h  datastream.h  datastream.hpp  datastream.t  domain.h  domain.hpp  exception.hpp  farrexpression.h  field.hpp  field.t  fixedarray.h  fixedarray.t  functions.cpp  functions.hpp  gexpression.h  gindex.h  gindex.t  grid.h  grid.hpp  grid.t  gridcheck.h  gridcheck.hpp  gstorage.h  gstorage.hpp  gstorage.t  macros.hpp  matrix.h  matrix.t  (+15 more)
src/computation/: algorithm.hpp  stencil.hpp
src/decomposition/: Makefile.am  domaindecomposition.hpp  mpi_cartesian_decomposition.hpp  mpi_cartesian_decomposition.t  mpi_context.cpp  mpi_context.hpp
src/decomposition/detail/: local_domain_context.hpp
src/diagnostic/: Makefile.am  diagnostic.cpp  diagnostic.hpp  diagnostic.t  hdfdiagnostic.cpp  hdfdiagnostic.hpp  hdfdiagnostic.t
src/generic/: static-range.hpp  typelist.hpp  typemap.hpp
src/grid/: Makefile.am  array.hpp  array.t  arraycheck.hpp  arrayexpression.hpp  boundary.hpp  boundary.t  domain.hpp  domainsubdivision.hpp  domainsubdivision.t  field.hpp  field.t  grid.hpp  grid.t  gridcheck.hpp  gridstorage.hpp  gridstorage.t  gridtransform.hpp  gridtransform.t  mpisubdivision.cpp  mpisubdivision.hpp  mpisubdivision.t  range.hpp  subgrid.hpp  subgrid.t
src/grid/gridstorage/: kokkos-storage.hpp  single-array-allocation.hpp  single-array-storage-base.hpp
src/grid/iteration/: kokkos-iteration.hpp  range-iteration.hpp
src/parser/: Makefile.am  Makefile.in  block.hpp  blockclasses.cpp  blockclasses.hpp  blockparameters.hpp  deckgrammar.hpp  deckgrammar.inc  deckscanner.cpp  deckscanner.hpp  operators2.hpp  parser.cpp  parser.hpp  parsercontext.hpp  parsersettings.hpp  parsertoken.cpp  parsertoken.hpp  parsertoken.t  tokenlist.hpp
src/parser/internal/: deckscanner.cpp
src/tools/: Makefile.am  fieldtools.hpp  fieldtools.t  literature.cpp  literature.hpp
src/util/: Makefile.am  algohelper.hpp  array_io.hpp  databuffer.hpp  databuffer.t  exceptions.cpp  exceptions.hpp  factor.cpp  factor.hpp  hilbert.hpp  interpolate1d.hpp  logger.hpp  singleton.hpp  traits.hpp  unique.hpp
src/variables/: Makefile.am  block.cpp  block.hpp  blockclasses.cpp  blockclasses.hpp  blockcontainer.hpp  blockdata.cpp  blockdata.hpp  blockparameters.cpp  blockparameters.hpp  dependencies.cpp  dependencies.hpp  expression.hpp  function_expression.cpp  function_expression.hpp  operators.hpp  types.hpp  variables.cpp  variables.hpp
testsuite/: Makefile  Makefile.am  Makefile.in  main.cpp  test_array.cpp  test_arrayexpression.cpp  test_fixarr.cpp  test_grid.cpp  test_parser.cpp  test_parser_sample.txt  test_range.cpp  test_schneck.cpp  test_schneck.h  testgrid.cpp  testmatrix.cpp  utility.cpp  utility.hpp
testsuite/computation/: test_algorithm.cpp
testsuite/decomposition/: mpi_test_context.cpp  mpi_test_context.hpp  test_mpi_cartesian_decomposition.cpp
testsuite/generic/: test_static_range.cpp  test_typelist.cpp
testsuite/grid/: grid_test_fixture.hpp  range_test_fixture.hpp  test_c_storage.cpp  test_fortran_storage.cpp  test_kokkos_storage.cpp  test_range_c_iteration.cpp  test_range_fortran_iteration.cpp  test_range_kokkos_iteration.cpp
testsuite/util/: test_array_io.cpp  test_hilbert.cpp
(+2 files in other folders)
