# Makefile.am
#
# Created on: 31 Aug 2012
# Author: Holger Schmitz
# Email: holger@notjustphysics.com
#
# Copyright 2012 Holger Schmitz
#
# This file is part of Schnek.
#
# Schnek is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Schnek is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Schnek.  If not, see <http://www.gnu.org/licenses/>.


libschnek_la_SOURCES += \
  grid/mpisubdivision.cpp
  
libschnekgridincludedir = $(includedir)/schnek/grid

libschnekgridinclude_HEADERS = \
  grid/arrayexpression.hpp    \
  grid/array.hpp              \
  grid/array.t                \
  grid/arraycheck.hpp         \
  grid/boundary.hpp           \
  grid/boundary.t             \
  grid/domainsubdivision.hpp  \
  grid/domainsubdivision.t    \
  grid/field.hpp              \
  grid/field.t                \
  grid/gridcheck.hpp          \
  grid/grid.hpp               \
  grid/grid.t                 \
  grid/gridstorage.hpp        \
  grid/gridstorage.t          \
  grid/mpisubdivision.hpp     \
  grid/mpisubdivision.t       \
  grid/range.hpp              \
  grid/subgrid.hpp            \
  grid/subgrid.t              \
  grid/gridtransform.hpp      \
  grid/gridtransform.t


