libschnek_la_SOURCES += \
  parser/blockclasses.cpp  \
  parser/deckscanner.cpp  \
  parser/parser.cpp       \
  parser/parsertoken.cpp 

libschnekinclude_HEADERS += \
  parser/blockclasses.hpp  \
  parser/deckgrammar.hpp  \
  parser/deckscanner.hpp  \
  parser/parser.hpp       \
  parser/parsertoken.hpp  \
  parser/tokenlist.hpp    
  
