libschnek_la_SOURCES += \
  parser/block.cpp  \
  parser/blockclasses.cpp  \
  parser/deckscanner.cpp  \
  parser/parser.cpp       \
  parser/parsertoken.cpp 

libschnekinclude_HEADERS += \
  parser/block.hpp  \
  parser/blockclasses.hpp  \
  parser/blockparameters.hpp  \
  parser/deckgrammar.hpp  \
  parser/deckscanner.hpp  \
  parser/parser.hpp       \
  parser/parsercontext.hpp       \
  parser/parsersettings.hpp       \
  parser/parsertoken.hpp  \
  parser/tokenlist.hpp    
  
