libschnek_la_SOURCES += \
  parser/deckscanner.cpp  \
  parser/parser.cpp       \
  parser/parsertoken.cpp 

libschnekinclude_HEADERS += \
  parser/deckgrammar.hpp  \
  parser/deckscanner.hpp  \
  parser/parser.hpp       \
  parser/parsercontext.hpp       \
  parser/parsersettings.hpp       \
  parser/parsertoken.hpp  \
  parser/tokenlist.hpp    
  
