
libschnek_la_SOURCES += \
  variables/block.cpp  \
  variables/blockclasses.cpp  \
  variables/variables.cpp

libschnekinclude_HEADERS += \
  variables/block.hpp  \
  variables/blockclasses.hpp  \
  variables/blockparameters.hpp  \
  variables/expression.hpp  \
  variables/function_expression.hpp  \
  variables/operators.hpp       \
  variables/types.hpp  \
  variables/variables.hpp    
  
